--- a/css/global.css
+++ b/css/global.css
@@ -1,19 +1,31 @@
 body{
     font-family: 'Changa';
-    background: #ECE9E6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #F7971E;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    text-align: center;
 }
 .main_div{
+    position: fixed;
+    top:50%;
+    left:50%;
     width: 350px;
-    margin:100px auto;
+    visibility: hidden;
+    opacity: 0;
+    transition:3 ease;
     background-color: #e7a61a;
+    padding: 0px 10px 8px 10px;
+    transform: translate(-50%,-50%);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.36);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.36);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.36);
-    padding: 0px 7px 8px 7px
+    z-index: 2;
+}
+.to_do{
+    font-size: 45px;
 }
 ul{
+    text-align: left;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -63,4 +75,73 @@ li:hover span{
 
 input{
     width: 99%;
+}
+/* button */
+button{
+
+    cursor: pointer;
+
+}
+.open{
+    background-color: #e7a61a;
+    color:white;
+    font-size: 20px;
+    font-weight: 400;
+    border:none;
+    width: 4em;
+    height: 2.5em;
+
+    border-radius: 25%;
+}
+.open:hover{
+    background-color: orange;
+    color:white;
+    font-size: 20px;
+    font-weight: 400;
+    border:1px solid white;
+    width: 4em;
+    height: 2.5em;
+
+    border-radius: 25%;
+}
+
+.close{
+    margin-top: 5px;
+    background-color: tomato;
+    color: white;
+    font-size: 15px;
+    border: none;
+    width: 4em;
+    height: 2.5em;
+    border-radius: 25%;
+}
+.close:hover{
+    margin-top: 5px;
+    background-color: red;
+    color: white;
+    font-size: 15px;
+    border: 1px solid white;
+    width: 4em;
+    height: 2.5em;
+    border-radius: 25%;
+}
+/* animation */
+.shadow{
+    top:0;
+    left:0;
+    position: fixed;
+    background: rgb(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
+    transition: 3 ease;
+}
+.shadow.active{
+    z-index: 1;
+    opacity: 1;
+}
+.main_div.active{
+    opacity: 1;
+    visibility: visible;
 }
